DDT-1107: Timestamp-Info GET